more layout issues
revome classes on footer links,
mobile manu display issue
font size on about page

--- a/business_web_page/style.css
+++ b/business_web_page/style.css
@@ -1420,7 +1420,7 @@ footer p span{
     }
     
     .about-div{
-        font-size: 2em;
+        font-size: 2.5em;
         width: 70%;
         display: block;
         margin: auto;
